Refactoring to support different executors All tests are stable-green

--- a/src/connector/connector/CommandFactoryTemplate.tt
+++ b/src/connector/connector/CommandFactoryTemplate.tt
@@ -76,7 +76,7 @@ namespace Connector
         public <#=returnType#> <#=fname#>(<#=fargs#>)
         {
             var builder = <#=factoryMethod#>("<#=name#>", <#=fpar#>);
-            return new <#=returnType#>(this._connection, builder);
+            return new <#=returnType#>(this._executor, builder);
         }
 <#}#>
     }
